/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package io.lightcone.relayer.data;

import "core.proto";
import "persistence.proto";
import "ethereum_persistence.proto";
import "relayer_common.proto";
import "relayer_ethereum.proto";
import "ethereum_event.proto";

/////////////////////////////////////////////////////////////////////
// TWO WAY DATABASE-RELATED REQUEST-RESPONSES
/////////////////////////////////////////////////////////////////////

message PersistOrder {
    // message Req {
    //     io.lightcone.core.RawOrder  order    = 1;
    // }
    message Res {
        io.lightcone.core.RawOrder  order    = 1;
        bool already_exist      = 2;
        io.lightcone.core.ErrorCode error = 3;
    }
}

message UpdateOrderState {
    message Req {
        string hash = 1;
        io.lightcone.core.RawOrder.State state = 2;
        bool changeUpdatedAtField = 3;
    }

    message Res {
        io.lightcone.core.ErrorCode error = 1;
    }
}

message UpdateOrderStatus {
    message Req {
        string hash = 1;
        io.lightcone.core.OrderStatus status = 2;
        bool changeUpdatedAtField = 3;
    }

    message Res {
        io.lightcone.core.ErrorCode error = 1;
}
}

message GetOrderByHash {
    message Req {
        string hash = 1;
    }

    message Res {
        io.lightcone.core.RawOrder  order = 1;
        io.lightcone.core.ErrorCode error = 2;
    }

    message BatchReq {
        repeated string hashes = 1;
    }

    message BatchRes {
        repeated io.lightcone.core.RawOrder  orders = 1;
        io.lightcone.core.ErrorCode error = 2;
    }
}


message GetOrders {
    message Req {
        message Market {
            string token_s = 1;
            string token_b = 2;
            bool   is_query_both_side = 3; // 是否查询两个方向的订单
        }
        string               owner      = 1;
        repeated io.lightcone.core.OrderStatus statuses   = 2;
        Market               market     = 3;
        io.lightcone.persistence.SortingType          sort       = 4;
        io.lightcone.persistence.Paging               skip       = 5;
    }

    message Res {
        repeated io.lightcone.core.RawOrder  orders = 1;
        int32             total  = 2;
    }
}

message UserCancelOrder {
    // message Req {
    //     repeated string order_hashes = 1;
    // }

    message Res {
        message Result {
            string    order_hash        = 1;
            io.lightcone.core.RawOrder   order             = 2;
            io.lightcone.core.ErrorCode error             = 3;
        }
        repeated Result updated_result = 1;
    }
}

message GetFills {
    message Req {
        message Market {
            string token_s = 1;
            string token_b = 2;
            bool   is_query_both_side = 3; // 是否查询两个方向的订单
        }
        message Ring2 {  // TODO(yongfeng): rename this class
            string  ring_hash         = 3;
            string  ring_index        = 4; // 用string是为了避免定义成int时默认值是0，ringIndex和fillIndex从0开始
            string  fill_index        = 5;
        }
        string      owner      = 1;
        string      tx_hash    = 2;
        string      order_hash = 3;
        Ring2       ring       = 4;
        Market      market     = 5;
        string      wallet     = 6;
        string      miner      = 7;
        io.lightcone.persistence.SortingType sort       = 8;
        io.lightcone.persistence.Paging      skip       = 9;
    }

    message Res {
        repeated io.lightcone.ethereum.persistence.Fill fills   = 1;
        int32   total  = 2;
    }
}

message GetRings {
    message Req {
        // TODO(yongfeng): remove this Ring2 definition and use the oneof directly
        message Ring2 {
            oneof filter {
                string ring_hash  = 1;
                int64  ring_index = 2;
            }
        }
        Ring2 ring              = 1;
        io.lightcone.persistence.SortingType sort       = 2;
        io.lightcone.persistence.Paging skip            = 3;
    }

    message Res {
        repeated io.lightcone.ethereum.persistence.Ring rings    = 1;
        int32 total                                     = 2;
    }
}

message PersistSettlementTx {
    message Req {
        SettlementTx tx = 1;
    }

    message Res {
        io.lightcone.core.ErrorCode error = 1;
    }
}

message GetPendingTxs {
    message Req {
        string owner       = 1; // required
        int64  time_before = 2; // create_at <= time_before
    }

    message Res {
        repeated SettlementTx txs = 1;
    }
}

message UpdateTxInBlock {
    message Req {
        string tx_hash = 1;
        string from    = 2;
        int64  nonce   = 3;
    }

    message Res {
        io.lightcone.core.ErrorCode error = 1;
    }
}

message PersistOHLCData {
    message Req {
        io.lightcone.ethereum.event.OHLCRawDataEvent data    = 1;
    }
    message Res {
        io.lightcone.ethereum.event.OHLCRawDataEvent record  = 1;
        io.lightcone.core.ErrorCode error     = 2;
    }
}

message GetMarketHistory {
    enum Interval {
        OHCL_INTERVAL_INVALID            = 0; // don't use it
        OHLC_INTERVAL_ONE_MINUTES        = 60;
        OHLC_INTERVAL_FIVE_MINUTES       = 300;
        OHLC_INTERVAL_FIFTEEN_MINUTES    = 900;
        OHLC_INTERVAL_THIRTY_MINUTES     = 1800;
        OHLC_INTERVAL_ONE_HOUR           = 3600;
        OHLC_INTERVAL_TWO_HOURS          = 7200;
        OHLC_INTERVAL_FOUR_HOURS         = 14400;
        OHLC_INTERVAL_TWELVE_HOURS       = 43200;
        OHLC_INTERVAL_ONE_DAY            = 86400;
        OHLC_INTERVAL_THREE_DAYS         = 259200;
        OHLC_INTERVAL_FIVE_DAYS          = 432000;
        OHLC_INTERVAL_ONE_WEEK           = 604800;
    }

    message Req {
        string    market_hash     = 1;
        Interval  interval       = 2;
        int64     beginTime      = 3;
        int64     endTime        = 4;
    }

    message Res {
        repeated OHLCData data  = 1;
    }
}
message SaveTokenMetadatas {
    message Req {
        repeated io.lightcone.core.TokenMetadata tokens = 1;
    }

    message Res {
        repeated string saved_addresses = 1;
    }
}

message UpdateTokenMetadata {
    message Req {
        io.lightcone.core.TokenMetadata token = 1;
    }

    message Res {
        io.lightcone.core.ErrorCode  error = 1;
    }
}

message UpdateTokenBurnRate {
    message Req {
        string address  = 1;
    }

    message Res {
        io.lightcone.core.ErrorCode  error = 1;
    }
}

message InvalidateToken {
    message Req {
        string address = 1;
    }

    message Res {
        io.lightcone.core.ErrorCode  error = 1;
    }
}

message LoadTokenMetadata {
    message Req {

    }

    message Res {
        repeated io.lightcone.core.TokenMetadata tokens = 1;
    }
}

message SaveMarketMetadatas {
    message Req {
        repeated io.lightcone.core.MarketMetadata markets = 1;
    }

    message Res {
        repeated string market_hash = 1;
    }
}

message UpdateMarketMetadata {
    message Req {
        io.lightcone.core.MarketMetadata market = 1;
    }

    message Res {
        io.lightcone.core.ErrorCode  error = 1;
    }
}

message TerminateMarket {
    message Req {
        string   market_hash  = 1;
    }

    message Res {
        io.lightcone.core.ErrorCode  error = 1;
    }
}

message LoadMarketMetadata {
    message Req {

    }

    message Res {
        repeated io.lightcone.core.MarketMetadata markets = 1;
    }
}